[gd_scene load_steps=4 format=3 uid="uid://bbrcydh78g10u"]

[ext_resource type="Script" uid="uid://obtxkqhnhk0p" path="res://scenes/unit/item/diode.gd" id="1_t3ohm"]
[ext_resource type="TileSet" uid="uid://dqx6jkj8wpoka" path="res://resources/unit/item/items.tres" id="2_wkwkq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwmi5"]
size = Vector2(256, 256)

[node name="Diode" type="CharacterBody2D"]
z_index = 13
z_as_relative = false
collision_layer = 131072
script = ExtResource("1_t3ohm")

[node name="Component" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 1, 0, 9, 0, 4, 0, 0, 0)
tile_set = ExtResource("2_wkwkq")

[node name="ConnectionTop" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_wkwkq")

[node name="ConnectionBottom" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_wkwkq")

[node name="ConnectionLeft" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_wkwkq")

[node name="ConnectionRight" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_wkwkq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(128, 128)
shape = SubResource("RectangleShape2D_dwmi5")
